feat: give terraform resources their own releases
This adds a top-level `tf-root` package to release-please, which will
encompass all terraform resources. There are nested packages within it,
for `tf-stacks` and `tf-modules` which will contain further nested
packages for each stack and module, respectively. Finally, there is a
`tf-control` package which will contain the stack definitions for
Spacelift.

Fixes #183
Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -5,5 +5,10 @@
   "devcontainers/janus": "0.1.4",
   "packages/janus.js": "0.1.1",
   "lib/pyjanus": "0.1.1",
-  "packages/release-trigger": "1.1.0"
+  "packages/release-trigger": "1.1.0",
+  "terraform": "0.0.0",
+  "terraform/control": "0.0.0",
+  "terraform/modules": "0.0.0",
+  "terraform/stacks": "0.0.0",
+  "terraform/stacks/hello-world": "0.0.0"
 }
