--- a/release-please-config.json
+++ b/release-please-config.json
@@ -116,6 +116,26 @@
                     "path": ".devcontainer/devcontainer.json"
                 }
             ]
+        },
+        "terraform": {
+            "release-type": "simple",
+            "package-name": "tf-root"
+        },
+        "terraform/control": {
+            "release-type": "simple",
+            "package-name": "tf-control"
+        },
+        "terraform/modules": {
+            "release-type": "simple",
+            "package-name": "tf-modules"
+        },
+        "terraform/stacks": {
+            "release-type": "simple",
+            "package-name": "tf-stacks"
+        },
+        "terraform/stacks/hello_world": {
+            "release-type": "simple",
+            "package-name": "tf-stack-hello_world"
         }
     }
 }
