--- a/.editorconfig
+++ b/.editorconfig
@@ -22,6 +22,10 @@ max_line_length = 72
 [TAG_EDITMSG]
 max_line_length = 72
 
+# Terraform files
+[*.tf]
+max_line_length = unset
+
 # Markdown files
 [*.md]
 max_line_length = unset
