--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,17 +31,30 @@ jobs:
           node-version: 22
           cache: 'npm'
 
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: |
+            **/requirements.txt
+            **/dev-requirements.txt
+
       - name: Cache NPM dependencies
         uses: actions/cache@v4
-        id: cache-deps
+        id: cache-npm-deps
         with:
           path: |
             node_modules
           key: ${{ runner.os }}-npm-v4-${{ hashFiles('package-lock.json') }}
 
-      - name: Install dependencies
-        if: steps.cache-deps.outputs.cache-hit != 'true'
+      - name: Install npm dependencies
+        if: steps.cache-npm-deps.outputs.cache-hit != 'true'
         run: npm ci
+
+      - name: Install python dependencies
+        run: |
+          find . -name dev-requirements.txt -exec pip install -r {} \;
+          find . -name requirements.txt -exec pip install -r {} \;
 
       - name: Set up Super-Linter
         run: cat .github/super-linter.env >> "$GITHUB_ENV"
